--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     max-width: 500px;
     overflow: hidden;
 }
+/*Background color display make normal */
 #display {
     width: 100%;
     padding: 20px;
